# trove

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  dodo.py  install.sh  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release-assets.yml  release.yml  tests.yml
backend/: __init__.py  cli.py  db.py  log_buffer.py  main.py  network.py  paths.py  session.py  version.py
backend/app/: __init__.py  auth.py  router.py
backend/bundle/: __init__.py  models.py  router.py  service.py
backend/config/: __init__.py  models.py  router.py  service.py
backend/documents/: __init__.py  models.py  repository.py  router.py  service.py
backend/i18n/: __init__.py  loader.py  router.py
backend/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json  zh.json
backend/ollama/: __init__.py  models.py  router.py  service.py
backend/setup/: __init__.py  models.py  router.py  service.py
backend/system/: __init__.py  router.py  service.py
backend/tasks/: __init__.py  models.py  render.py  repository.py  router.py  runner.py  tools.py
docs/: index.md
docs/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/de/: index.md
docs/de/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/de/user/: index.md  media-input.md  running-a-gem.md
docs/dev/: backend.md  frontend.md  index.md  setup.md
docs/diagrams/: module-map.dot  module-map.mmd  network-topology.dot  network-topology.mmd
docs/es/: index.md
docs/es/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/es/user/: index.md  media-input.md  running-a-gem.md
docs/fr/: index.md
docs/fr/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/fr/user/: index.md  media-input.md  running-a-gem.md
docs/hooks/: copy_sitemaps.py
docs/it/: index.md
docs/it/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/it/user/: index.md  media-input.md  running-a-gem.md
docs/pt/: index.md
docs/pt/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/pt/user/: index.md  media-input.md  running-a-gem.md
docs/superpowers/plans/: 2026-04-05-gems-backend.md  2026-04-05-gems-frontend.md  2026-04-05-task-system.md  2026-04-06-image-audio-support.md  2026-04-07-document-library-frontend.md  2026-04-09-documents-panel-ui-refinements.md  2026-04-10-release-install-system.md  2026-04-11-security.md
docs/superpowers/specs/: 2026-04-03-backend-foundation-design.md  2026-04-04-setup-app-modes-design.md  2026-04-05-gems-design.md  2026-04-05-task-system-design.md  2026-04-07-document-library-design.md  2026-04-09-documents-panel-ui-refinements-design.md
docs/user/: index.md  media-input.md  running-a-gem.md
docs/zh/: index.md
docs/zh/admin/: documents.md  gems.md  index.md  installation.md  settings.md
docs/zh/user/: index.md  media-input.md  running-a-gem.md
frontend/: eslint.config.js  index.html  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: app.ts  bundle.ts  client.ts  config.ts  documents.ts  i18n.ts  ollama.ts  session.ts  setup.ts  system.ts  tasks.ts
frontend/src/components/: AdminLogin.tsx  GemIcon.tsx  HelpBar.tsx  InfoButton.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: Admin.tsx  AdminPanel.tsx  DocumentsPanel.tsx  GemForm.tsx  GemRunner.tsx  ManageDashboard.tsx  Setup.tsx  SetupWizard.tsx  TaskShell.tsx
locales/: de.json  en.json  es.json  fr.json  it.json  pt.json  zh.json
locales/de/: help-ctx.md  help-gem-documents.md  help-gem-template.md
locales/en/: help-gem-documents.md  help-gem-template.md
locales/es/: help-bundle.md  help-ctx.md  help-gem-documents.md  help-gem-intro.md  help-gem-template.md
locales/fr/: help-ctx.md  help-gem-documents.md  help-model.md
locales/it/: help-ctx.md  help-gem-intro.md  help-model.md
locales/pt/: help-ctx.md  help-gem-documents.md  help-gem-intro.md  help-gem-template.md  help-model.md
locales/zh/: help-bundle.md  help-ctx.md  help-gem-intro.md  help-gem-template.md
planning/superpowers/plans/: 2026-04-03-backend-foundation.md  2026-04-04-setup-app-modes.md  2026-04-07-document-library-backend.md  2026-04-10-release-install-system.md  (+3 more)
scripts/: dev.sh  i18n.py
tests/: conftest.py  test_app_router.py  test_auth.py  test_bundle.py  test_cli.py  test_config.py  test_db.py  test_documents.py  test_gems_router.py  test_i18n.py  test_main.py  test_ollama_service.py  test_paths.py  test_session.py  test_setup.py  test_system.py  test_task_models.py  test_task_render.py  test_task_repository.py  test_task_runner.py  test_task_tools.py
(+26 files in other folders)
