[project]
name = "trove"
version = "0.1.0"
description = "Local LLM platform for non-technical users"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "psutil>=6.1",
    "sse-starlette>=2.2",
    "python-dotenv>=1.0",
]

[tool.taskipy.tasks]
dev-backend  = "uvicorn backend.main:app --reload --port 5173"
dev-frontend = "cd frontend && bun run dev"
build        = "cd frontend && bun run build"
start        = "task build && uvicorn backend.main:app"
install-deps = "uv sync --extra dev && cd frontend && bun install"
test         = "pytest -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.14.1",
]
