[project]
name = "trove"
version = "0.1.0"
description = "Local LLM platform for non-technical users"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "psutil>=6.1",
    "sse-starlette>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "pydantic-ai>=0.0.54",
]

[project.scripts]
trove = "backend.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.taskipy.tasks]
# Run both servers together (recommended for development)
dev          = "bash scripts/dev.sh"
# Run servers individually
dev-backend  = "uvicorn backend.main:app --reload --port 8001"
dev-frontend = "cd frontend && bun run dev"
# Trove commands (setup mode and app mode)
setup        = "trove setup"
start        = "trove start"
# Production: build frontend first
build        = "cd frontend && bun run build"
install-deps = "uv sync --group dev && cd frontend && bun install"
test         = "pytest -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.14.1",
]
