[project]
name = "trove"
version = "1.0.3"
description = "Local LLM platform for non-technical users"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "psutil>=6.1",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "markitdown[all]>=0.1",
    "pydantic-ai>=0.0.54",
    "bcrypt>=4.0",
    "parsimathious>=0.1.1",
]

[project.scripts]
trove = "backend.cli:cli"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["static/**/*", "i18n/locales/**/*"]

[tool.taskipy.tasks]
# Run both servers together (recommended for development)
dev          = "bash scripts/dev.sh"
# Run servers individually
dev-backend  = "uvicorn backend.main:app --reload --port 8001"
dev-frontend = "cd frontend && bun run dev"
dev-mock     = "cd frontend && VITE_MOCK_API=1 bun run dev"
# Trove commands (setup mode and app mode)
setup        = "trove setup"
start        = "trove start"
# Build pipeline (incremental via doit — only rebuilds what changed)
build        = "doit build_frontend"
build-docker = "doit build_docker"
# Run the Docker image (volumes persist models and config between runs)
docker-setup = "docker run -it --rm -p 7071:7071 $(docker info 2>/dev/null | grep -q nvidia && echo '--gpus all') $([ -e /dev/kfd ] && echo '--device /dev/kfd') $([ -e /dev/dri ] && echo '--device /dev/dri') -v trove-ollama:/root/.ollama -v trove-config:/root/.config/trove trove setup"
docker-start = "docker run -it --rm -p 7770:7770 $(docker info 2>/dev/null | grep -q nvidia && echo '--gpus all') $([ -e /dev/kfd ] && echo '--device /dev/kfd') $([ -e /dev/dri ] && echo '--device /dev/dri') -v trove-ollama:/root/.ollama -v trove-config:/root/.config/trove trove start"
install-deps = "uv sync --group dev && cd frontend && bun install"
install-docs = "uv sync --group docs"
docs-build   = "uv run mkdocs build --strict"
docs-serve   = "uv run mkdocs serve -a localhost:9999"
test         = "pytest -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "doit>=0.36",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.14.1",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocs-static-i18n>=1.3",
]
